--- a/src/web2/package.json
+++ b/src/web2/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-component-export-image": "^1.0.6",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-query": "^3.39.3",
